--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,9 +4,10 @@ on:
   push:
     branches:
       - master
-      - classic
     tags:
       - '*'
+    paths-ignore:
+      - '.github/**'
 
 jobs:
   build:
